--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,30 +169,49 @@
   width: 100px;
   height: 100px;
   position: relative;
-}
-
-.sg-upload-image-card-sg img {
+  border: 2px solid #eee;
+  margin-right: 10px;
+  margin-bottom: 10px;
   overflow: hidden;
 }
 
 .sg-upload-image-delete-sg {
   position: absolute;
-  right: -10px;
-  top: -10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100px;
+  height: 100px;
+  background-color: transparent;
+  -webkit-transition: background-color 0.5s;
+  transition: background-color 0.5s;
 }
 
 .sg-upload-image-delete-sg span {
-  color: #9e9e9e;
-  width: 15px;
-  height: 15px;
-  padding-left: 2px;
-  padding-top: 2px;
-  background-color: #dddddd;
-  border-radius: 50%;
+  color: transparent;
+  font-size: 4em;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
-.sg-upload-image-delete-sg span:hover {
-  color: #666666;
+.sg-upload-image-delete-sg:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.sg-upload-image-delete-sg:hover span {
+  color: white;
+}
+
+.sg-upload-hint-sg {
+  margin-top: 15px;
+  color: grey;
+  font-size: 0.9em;
 }
 
 .sg-upload-image-content-sg {
@@ -211,15 +230,11 @@
       flex-wrap: wrap;
 }
 
-.sg-upload-image-card-sg {
-  border: 2px solid #eee;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
 .table,
-.table th {
+.table th,
+.table td {
   text-align: center;
+  vertical-align: middle !important;
 }
 
 .sg-pagination-info {
