--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -71,32 +71,39 @@
   width: 100px;
   height: 100px;
   position: relative;
-}
-
-.sg-upload-image-card-sg img {
+  border: 2px solid #eee;
+  margin-right: 10px;
+  margin-bottom: 10px;
   overflow: hidden;
 }
 
 .sg-upload-image-delete-sg {
   position: absolute;
-  right: -10px;
-  top: -10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  background-color: transparent;
+  transition: background-color 0.5s;
 }
 
 .sg-upload-image-delete-sg span {
-  color: #9e9e9e;
-  width: 15px;
-  height: 15px;
-  padding-left: 2px;
-  padding-top: 2px;
-  background-color: #dddddd;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
+  color: transparent;
+  font-size: 4em;
+  transition: color 0.5s;
+}
+.sg-upload-image-delete-sg:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.sg-upload-image-delete-sg:hover span {
+  color: white;
 }
 
-.sg-upload-image-delete-sg span:hover {
-  color: #666666;
+.sg-upload-hint-sg {
+  margin-top: 15px;
+  color: grey;
+  font-size: 0.9em;
 }
 
 .sg-upload-image-content-sg {
@@ -109,15 +116,11 @@
   flex-wrap: wrap;
 }
 
-.sg-upload-image-card-sg {
-  border: 2px solid #eee;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
 .table,
-.table th {
+.table th,
+.table td {
   text-align: center;
+  vertical-align: middle !important;
 }
 
 .sg-pagination-info {
