--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -88,7 +88,7 @@
   font-size: 3em;
   background-color: transparent;
 }
-.sg-upload-image-mask-sg.sg-uploading {
+.sg-upload-image-btn-sg.sg-uploading .sg-upload-image-mask-sg {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -112,7 +112,7 @@
   top: 0;
 }
 
-.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-child:before {
+.sk-circle .sk-child:before {
   content: '';
   display: block;
   margin: 0 auto;
@@ -123,47 +123,47 @@
   -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
   animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
 }
-.sk-circle .sk-circle2 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle2 {
   -webkit-transform: rotate(30deg);
   -ms-transform: rotate(30deg);
   transform: rotate(30deg); }
-.sk-circle .sk-circle3 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle3 {
   -webkit-transform: rotate(60deg);
   -ms-transform: rotate(60deg);
   transform: rotate(60deg); }
-.sk-circle .sk-circle4 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle4 {
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg); }
-.sk-circle .sk-circle5 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle5 {
   -webkit-transform: rotate(120deg);
   -ms-transform: rotate(120deg);
   transform: rotate(120deg); }
-.sk-circle .sk-circle6 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle6 {
   -webkit-transform: rotate(150deg);
   -ms-transform: rotate(150deg);
   transform: rotate(150deg); }
-.sk-circle .sk-circle7 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle7 {
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg); }
-.sk-circle .sk-circle8 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle8 {
   -webkit-transform: rotate(210deg);
   -ms-transform: rotate(210deg);
   transform: rotate(210deg); }
-.sk-circle .sk-circle9 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle9 {
   -webkit-transform: rotate(240deg);
   -ms-transform: rotate(240deg);
   transform: rotate(240deg); }
-.sk-circle .sk-circle10 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle10 {
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg); }
-.sk-circle .sk-circle11 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle11 {
   -webkit-transform: rotate(300deg);
   -ms-transform: rotate(300deg);
   transform: rotate(300deg); }
-.sk-circle .sk-circle12 {
+.sg-upload-image-btn-sg.sg-uploading .sk-circle .sk-circle12 {
   -webkit-transform: rotate(330deg);
   -ms-transform: rotate(330deg);
   transform: rotate(330deg); }
